syntax = "proto3";

option go_package = "github.com/c12s/oort/pkg/proto";

package proto;

import "model.proto";

service OortEvaluator {
  rpc Authorize(AuthorizationReq) returns (AuthorizationResp) {}
}

message AuthorizationReq {
  Resource subject = 1;
  Resource object = 2;
  repeated Attribute envAttributes = 3;
  string permissionName = 4;
}

message AuthorizationResp {
  bool allowed = 1;
}